--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
 /*bar de navigation*/
 
 nav{
-    display: flex;  width: 100%;    margin-top: 10px;   justify-content: space-between; align-items: center;    position: fixed;
+    display: flex;  width: 100%;    margin-top: 10px;   justify-content: space-between; align-items: center;
 }
 
 .log{
